fixed style css for timer to make it more readable, fixed js to show time in corret format when below single dignts, started with formating questions in html and js

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,15 @@
+body {
+  font-family: sans-serif;
+}
+
+
 .main-title {
   margin-top: 25px;
 }
 
-.timer {
-  margin-right: 30px;
-  background-color: #4f4f51;
-  color: white;
-  padding: 10px;
+.start-time {
+  margin: 30px;
+  border: 3px solid red;
+  border-radius: 3px;
+  padding: 5px;
 }
